--- a/src/views/5sentidos2.ejs
+++ b/src/views/5sentidos2.ejs
@@ -88,22 +88,22 @@
 
                     <div class="page slide-page">
                         <div class="title">Escribe 5 cosas que puedas ver.</div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="1."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="2."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="3."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="4."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="5."/>
                         </div>
-                        <div class="field">
+                        <div class="field"  id="btns-flex">
                             <button class="firstNext next">Siguiente</button>
                         </div>
                     </div>
@@ -113,16 +113,16 @@
                         <div class="field">
                             <input type="text" placeholder="1."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="2."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="3."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="4."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="btns-flex">
                             <button class="prev-1 prev">Anterior</button>
                             <button class="firstNext next">Siguiente</button>
                         </div>
@@ -130,43 +130,43 @@
 
                     <div class="page">
                         <div class="title">Escribe 3 sonidos que alcances a escuchar.</div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="1."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="2."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="3."/>
                         </div>
-                        <div class="field btns">
+                        <div class="field btns"  id="btns-flex">
                             <button class="prev-1 prev">Anterior</button>
                             <button class="next-1 next">Siguiente</button>
                         </div>
                     </div>
                     <div class="page">
                         <div class="title">Escribe 2 olores que percibas.</div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="1."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="2."/>
                         </div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="3."/>
                         </div>
-                        <div class="field btns">
+                        <div class="field btns" id="btns-flex">
                             <button class="prev-2 prev">Anterior</button>
                             <button class="next-2 next">Siguiente</button>
                         </div>
                     </div>
                     <div class="page">
                         <div class="title">Escribe un sabor que puedas percibir.</div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="1."/>
                         </div>
                         <div class="title">¡Felicidades! Concluiste el ejercicio.</div>
-                        <div class="field btns">
+                        <div class="field btns" id="btns-flex">
                             <button class="prev-2 prev">Anterior</button>
                             <button class="next-2 next" style="opacity: 0; width: 1%">Siguiente</button>
                         </div>
@@ -272,7 +272,6 @@ function initMultiStepForm() {
     <div class="back">
         <a href="/misejercicios"><button>Volver</button></a>
     </div>
-    <%- include('./partials/footer') %>
 </main>
     <br>
 </html>
