--- a/src/views/imaginacion.ejs
+++ b/src/views/imaginacion.ejs
@@ -73,7 +73,7 @@
           <h2 class="h2-ansiedad">Imaginación guiada</h2>
           <br>
           <p>La visualización o imaginación guiada es una técnica que se emplea para reducir el estrés y la ansiedad mediante la creación imaginaria de imágenes y emociones positivas.</p>
-          <p>Observa la ilustración que se muestra a continuación, y por varios segundos trata de imaginar tantas cosas como puedas, por ejemplo los árboles, hojas cayendo, el viento soplando, el ruido del agua... usa tu mente para tratar de estar en la ilustración de la forma más realista posible, empleando tu imaginación. </p>
+          <p>Observa la ilustración que se muestra a continuación, y por varios segundos trata de imaginar tantas cosas como puedas, por ejemplo los árboles, hojas cayendo, el viento soplando, el ruido del agua... usa tu mente para tratar de estar en la ilustración de la forma más realista posible, empleando tu imaginación. Puedes utilizar el audio de la parte inferior para ayudarte en el ejercicio.</p>
            <br>
         </div>
         <div class="col">
@@ -84,12 +84,18 @@
 </div>
   
     <img src="/img/imaginacion.svg" class="img-guiada">
+
+<audio controls autoplay style="margin-top: 50px;">
+  <source src="/audio/relaxing_audio_nature.mp3" type="audio/mpeg">
+  Tu navegador no es compatible con el audio. 
+</audio>
+
     </body>
     <div class="back">
         <a href="/misejercicios"><button>Volver</button></a>
     </div>
     </main>
-    <%- include('./partials/footer') %>
+    <%- include('./partials/footer2') %>
       <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
