--- a/src/views/objetivos.ejs
+++ b/src/views/objetivos.ejs
@@ -67,5 +67,5 @@
 </form>
 </div> <!--Termina main-->
     </body>
-    <%- include('./partials/footer') %>
+    <%- include('./partials/footer2') %>
 </html>
