--- a/src/views/respiracion.ejs
+++ b/src/views/respiracion.ejs
@@ -25,8 +25,8 @@
  </style>
 
 </head>
-
-<header>
+<body>
+<header style="margin-top: 150px!important;">
     <div class="bg-dark">
      <div class="container navcont w-100">
          <nav class="navbar navbar-expand-lg navbar-dark">
@@ -62,7 +62,6 @@
 <!--Perfil-->
 
 
-<body>
     <div class="ejercicios-text">
     <h2 class="h2-ansiedad">Respira</h2>
 </div>
