--- a/src/public/css/footer2.css
+++ b/src/public/css/footer2.css
@@ -63,12 +63,12 @@
 {
   margin-right:15px;
   text-transform:uppercase;
-  color:#96a2b2;
+  color:rgb(102, 92, 200);
   font-weight:700;
   font-size:13px
 }
 .social-icons a{
-  background-color:#eceeef;
+  background-color: rgb(102, 92, 200);
   color:#818a91;
   font-size:16px;
   display:inline-block;
