--- a/src/public/css/listado2.css
+++ b/src/public/css/listado2.css
@@ -2,6 +2,10 @@
   box-sizing: border-box!important;
 }
 
+body{
+  height: 100vh!important;
+}
+
 .mr-n2 {
     margin-right: -.75em !important;
   }
