--- a/src/public/css/objetivos.css
+++ b/src/public/css/objetivos.css
@@ -18,7 +18,6 @@
 .main{
     text-align: center;
     color: white;
-    padding-bottom: 100px;
 }
 
 .titles{
@@ -121,4 +120,14 @@ color: rgb(65, 64, 105);
         width: fit-content;
         height: fit-content;
   }
+}
+
+@media (min-width: 1000px){
+    .registro1{
+        margin-top: -100px!important;
+    }
+}
+
+.registro1{
+    margin-top: -50px!important;
 }
