--- a/src/public/css/perfil.css
+++ b/src/public/css/perfil.css
@@ -28,7 +28,7 @@ main{
     text-align: center;
     padding: 0;
     box-sizing: border-box;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat!important;
     background-position-y: -5px;
     background-size: cover;
     background: rgba(20, 0, 36, 0);
