--- a/src/public/css/respiracion.css
+++ b/src/public/css/respiracion.css
@@ -9,18 +9,15 @@
     --timing: 8s;
 }
 
-html{
-    margin-top: 80px;
-}
-
 body {
     width: 100vw;
     height: 100vh;
     display: grid;
     justify-content: center;
     align-content: center;
-    background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1648519753/Por%20Ti/fondo_registro_s5hqja.png);
-    background-size: cover;
+    background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1663188949/Por%20Ti/fondo-nuevo_roden6.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 body h1{
