--- a/src/views/listado.ejs
+++ b/src/views/listado.ejs
@@ -28,7 +28,7 @@
  
     <title>Contactos</title>
   </head>
-  <body>
+  <body style="height: 100vh!important;">
 
     <header>
        <div class="bg-dark">
@@ -168,9 +168,12 @@
   </div>
   <div style="background-color: linear-gradient(rgba(33, 31, 72, 0.149) 20%, rgb(33, 31, 72) 100%); position: relative; bottom: 0;;">
   <div style="height: 100px;">
+      <div class="espacio" style="height: 50px;"></div> 
 </div>
+</div>
+</div>
+<div style="margin-top: -100px;">
 <%- include('./partials/footer2') %>
-</div>
 </div>
 </main>
     <!-- Optional JavaScript -->
@@ -178,5 +181,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
