--- a/src/views/perfilcopy.ejs
+++ b/src/views/perfilcopy.ejs
@@ -72,16 +72,15 @@
     <main>
         <% if(user.objetivo !== 'saludsocial' && user.objetivo !== 'saludfisica') { %>
             <div class="gradient-profile">
-<div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658509260/Por%20Ti/salud_banner_lbbqj9.png);">
+<div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658509260/Por%20Ti/salud_banner_lbbqj9.png); background-repeat: no-repeat; background-size: 100%!important;">
     <% } %>
 
    <% if(user.objetivo !== 'saludsocial' && user.objetivo !== 'saludmental') { %>
-    <div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658341637/Por%20Ti/banner_fisica_atbfiw.png);">
+    <div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658341637/Por%20Ti/banner_fisica_atbfiw.png); background-repeat: no-repeat; background-size: 100%!important;">
     <% } %>
 
     <% if(user.objetivo !== 'saludmental' && user.objetivo !== 'saludfisica') { %>
-        <div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658341642/Por%20Ti/banner_social_yssu00.png);
-        ">
+        <div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658341642/Por%20Ti/banner_social_yssu00.png); background-repeat: no-repeat; background-size: 100%!important;">
         <% } %>
 
  <!--Datos del perfil-->
@@ -186,4 +185,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
+  <%- include('./partials/footer2') %>
 </html>
