--- a/src/views/tapping.ejs
+++ b/src/views/tapping.ejs
@@ -21,7 +21,6 @@
       <!--CSS--> 
       <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
       <link rel="stylesheet" href="/css/estilostext.css" type="text/css">
-      <link rel="stylesheet" href="/css/ejercicios.css" type="text/css">
       <link rel="stylesheet" href="/css/footer.css" type="text/css">     
       <link rel="stylesheet" href="/css/arteterapia.css" type="text/css">
       <link rel="stylesheet" href="/css/tapping.css" type="text/css">
@@ -42,8 +41,8 @@
      <script src="https://kit.fontawesome.com/60756a3678.js" crossorigin="anonymous"></script>
 
     </head>
-
-    <header>
+    <body style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1662390194/Por%20Ti/fondo_login_gk172y.png); background-repeat: no-repeat; background-size: cover;">
+    <header style="padding-top: 150px;">
       <div class="bg-dark">
        <div class="container navcont w-100" >
            <nav class="navbar navbar-expand-lg navbar-dark">
@@ -77,14 +76,13 @@
       </div>
    </header>
 
-   <body>
     <main>
 <div class="container ejercicios-text" style="margin-top: 120px;">
   <div class="row align-items-center justify-content-center">
     <div class="col">
     </div>
     <div class="col-8 col-xs-12 col-sm-11 col-md-10">
-      <h2 class="h2-ansiedad" style="font-family: 'Poppins'!important; font-size: 32px!important; font-weight: 700!important;">Tapping</h2>
+      <h2 class="h2-ansiedad" style="font-family: 'Poppins'!important; font-size: 32px!important; font-weight: 700!important; text-align: center!important; margin-top: 20px;">Tapping</h2>
       <br>
       <p class="title-p" style="text-align: center">Es una técnica que permite liberar emociones, aliviar el estrés y la ansiedad. Se basa en la acupuntura milenaria, enfocandose en determinados puntos del cuerpo donde se acumula tensión emocional.<br><br></p> 
       <br>
