--- a/src/views/5sentidos2.ejs
+++ b/src/views/5sentidos2.ejs
@@ -110,7 +110,7 @@
 
                     <div class="page slide-page">
                         <div class="title">Escribe 4 cosas que puedas sentir.</div>
-                        <div class="field">
+                        <div class="field" id="field-text">
                             <input type="text" placeholder="1."/>
                         </div>
                         <div class="field" id="field-text">
