--- a/src/public/css/5sentidos2.css
+++ b/src/public/css/5sentidos2.css
@@ -65,12 +65,17 @@ body {
     color:rgb(51, 24, 95);
 }
 .form-outer form .page .field {
-    width: auto;
+    width: 100%;
     height: 45px;
     margin: 45px 0;
     display: flex;
     position: relative;
 }
+
+#field-text{
+    margin-left: 30px!important;
+}
+
 form .page .field .label {
     position: absolute;
     top: -30px;
@@ -316,3 +321,4 @@ align-self: center;
     display: flex;
     justify-content: center;
 }
+
