--- a/src/public/css/listado2.css
+++ b/src/public/css/listado2.css
@@ -2,10 +2,6 @@
   box-sizing: border-box!important;
 }
 
-body{
-  height: 100vh!important;
-}
-
 .mr-n2 {
     margin-right: -.75em !important;
   }
@@ -124,4 +120,9 @@ padding-bottom: 10px;
       }
       }
   
+      @media(min-width: 1329px){
+        .content-box-list{
+          margin-top: 28vh;
+        }
+      }
   
