--- a/src/views/ejerciciosrecientes404.ejs
+++ b/src/views/ejerciciosrecientes404.ejs
@@ -131,11 +131,10 @@
         <main>
           <h4 style="margin-top: 100px;">Aún no has realizado ejercicios.</h4>
           <div class="contenedor-especialista">
-            <a href="/misejercicios"><button class="ejercicios-btn" style="margin-top: 25px; margin-bottom: 100px;">Volver</button></a>
+            <a href="/misejercicios"><button class="ejercicios-btn" style="margin-top: 25px; margin-bottom: 40%;">Volver</button></a>
         </div>
         </main>
   </div>
-  <%- include('./partials/footer2') %>
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
