--- a/src/views/imaginacion.ejs
+++ b/src/views/imaginacion.ejs
@@ -82,20 +82,25 @@
       <br>
   </div>
 </div>
-  
-    <img src="/img/imaginacion.svg" class="img-guiada">
 
+<div style="display:flex; flex-direction: column;">
+  <div>
+    <img src="/img/imaginacion.svg" class="img-guiada">
+  </div>
+
+  <div>
 <audio controls autoplay style="margin-top: 50px;">
   <source src="/audio/relaxing_audio_nature.mp3" type="audio/mpeg">
   Tu navegador no es compatible con el audio. 
 </audio>
+</div>
+</div>
 
     </body>
     <div class="back">
         <a href="/misejercicios"><button>Volver</button></a>
     </div>
     </main>
-    <%- include('./partials/footer2') %>
       <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
