--- a/src/views/listado.ejs
+++ b/src/views/listado.ejs
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="/css/footer2.css" type="text/css">
     <link rel="stylesheet" href="/css/listado2.css" type="text/css">
 
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@800&display=swap" rel="stylesheet">
@@ -28,7 +30,7 @@
  
     <title>Contactos</title>
   </head>
-  <body style="height: 100vh!important;">
+  <body style="background-color: rgb(23, 21, 53); height: 80%;">
 
     <header>
        <div class="bg-dark">
@@ -65,8 +67,8 @@
     </header>
 
     <!--Estrellas-->   
-
-            <div class="scene" style="height: 100%; padding-bottom: 0!important; margin-bottom: 0!important;">
+    <div class="cont-listado" style="height: 90vh!important;">
+            <div class="scene" style="height: 100%; padding-bottom: 100px!important; margin-bottom: 0!important;">
                 <script type="text/javascript">
                     function stars(){
                         let count = 100;
@@ -96,12 +98,13 @@
                 </script>
 
  <!--Beneficios prueba 2--> 
- <main>
+ <div class="content-box-list">
  <div class="content" style="margin-top: 150px; margin-bottom: 100px; padding: 0 10px;">
       <h2 style="margin-top: 100px;">¿Necesitas ayuda más personalizada?</h2>
       <h3 class="h3-Index">Te compartimos los siguientes números a los que podrás acudir si necesitas atención urgente.</h3>
   </div>
 
+   <main style="display: flex; align-items:baseline;">
   <div class="row justify-content-center">
     <div class="col-10 col-xs-10 col-md-4 col-lg-3 mb-3" id="contact">
   
@@ -166,13 +169,10 @@
   
     </div>
   </div>
-  <div style="background-color: linear-gradient(rgba(33, 31, 72, 0.149) 20%, rgb(33, 31, 72) 100%); position: relative; bottom: 0;;">
-  <div style="height: 100px;">
-      <div class="espacio" style="height: 50px;"></div> 
 </div>
 </div>
 </div>
-<div style="margin-top: -100px;">
+<div style="position: relative; top: -15px; padding-bottom: 15px;">
 <%- include('./partials/footer2') %>
 </div>
 </main>
