--- a/src/views/partials/footer2.ejs
+++ b/src/views/partials/footer2.ejs
@@ -8,10 +8,10 @@
 <body>
   <div class="container part1">
   <div class="row align-items-center">
-    <div class="col-sm-2">
+    <div class="col-sm-12 col-lg-2">
     <ul class="social-icons">
-      <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+      <li><a class="instagram" href="https://www.instagram.com/porti.bienestar"><i class="fa fa-instagram" style="color:white!important;"></i></a></li>
+      <li><a class="facebook" href="https://www.facebook.com/porti.bienestar"><i class="fa fa-facebook"></i></a></li>
     </ul>
   </div>
     <div class="col-sm-8"></div>
@@ -23,16 +23,18 @@
 
     <div class="container part2">
       <div class="row align-items-center justify-content-center">
-        <div class="col-sm-3">
+        <div class="col-sm-12 col-lg-3">
           © 2022 Por Ti
       </div>
       <div class="col-sm-7 align-self-end">
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-12 col-lg-1"><a href="https://www.youtube.com/channel/UCtGwfc0KzziVnD_aaElBhRg" style="color: white!important;" target="_blank" rel="noopener noreferrer">
       YouTube
+    </a>
     </div>
-    <div class="col-sm-1 align-self-end">
+    <div class="col-sm-12 col-lg-1 align-self-end"><a href="https://open.spotify.com/playlist/6c52OhDh9q19692tK5vHqT?si=4597c58c5de248a2&pt=4e5d99b9951b20bf47708d00dea9f3bd" style="color: white!important;" target="_blank" rel="noopener noreferrer">
       Podcast
+    </a>
     </div>
       </div>
       </div>
