--- a/src/views/perfilcopy.ejs
+++ b/src/views/perfilcopy.ejs
@@ -9,13 +9,13 @@
    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
 
     <!--CSS-->
-    <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
     <link rel="stylesheet" href="/css/ejercicios-cont.css" type="text/css">
     <link rel="stylesheet" href="/css/ejercicios.css" type="text/css">
     <link rel="stylesheet" href="/css/fondo.css" type="text/css">
     <link rel="stylesheet" href="/css/footer2.css" type="text/css">
     <link rel="stylesheet" href="/css/header.css" type="text/css">
     <link rel="stylesheet" href="/css/perfil.css" type="text/css">
+    <link rel="stylesheet" href="/css/estilosindex.css" type="text/css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -70,29 +70,29 @@
 
 <body>
     <main>
-        <% if(user.objetivo !== 'saludsocial' && user.objetivo !== 'saludfisica') { %>
-            <div class="gradient-profile">
-<div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658509260/Por%20Ti/salud_banner_lbbqj9.png); background-repeat: no-repeat; background-size: 100%!important;">
-    <% } %>
-
-   <% if(user.objetivo !== 'saludsocial' && user.objetivo !== 'saludmental') { %>
-    <div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658341637/Por%20Ti/banner_fisica_atbfiw.png); background-repeat: no-repeat; background-size: 100%!important;">
-    <% } %>
-
-    <% if(user.objetivo !== 'saludmental' && user.objetivo !== 'saludfisica') { %>
-        <div class="datos-perfil" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658341642/Por%20Ti/banner_social_yssu00.png); background-repeat: no-repeat; background-size: 100%!important;">
+      <div class="banner-profile">
+      <% if(user.objetivo !== 'saludsocial' && user.objetivo !== 'saludfisica') { %>
+      <div class="text-header d-flex align-items-center" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658509260/Por%20Ti/salud_banner_lbbqj9.png); background-repeat: no-repeat; background-size: cover!important;">
         <% } %>
 
- <!--Datos del perfil-->
-        
-<h3 class="profile-h3">¡Hola!</h3>
-<h1 class="profile-h1" style="text-align: center!important"> <%= user.first_name %> <%= user.last_name %></h1>
-</div>
-</div>
-</div>
+        <% if(user.objetivo !== 'saludsocial' && user.objetivo !== 'saludmental') { %>
+          <div class="text-header d-flex align-items-center" style="background-image: url(hhttps://res.cloudinary.com/dc7uyfv94/image/upload/v1658341637/Por%20Ti/banner_fisica_atbfiw.png); background-repeat: no-repeat; background-size: cover!important;">
+          <% } %>
+
+          <% if(user.objetivo !== 'saludmental' && user.objetivo !== 'saludfisica') { %>
+            <div class="text-header d-flex align-items-center" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658341642/Por%20Ti/banner_social_yssu00.png); background-repeat: no-repeat; background-size: cover!important;">
+            <% } %>
+
+        <div class="container">
+            <div class="row" id="datos-perfil">
+                <div class="col-sm-12">
+                  <p>¡Hola!</p>
+                    <h2 style="margin-top: -45px;"> <%= user.first_name %> <%= user.last_name %></h2>
+                </div>
             </div>
-
-
+        </div>
+       </div>
+      </div>
 
 <main style="padding-top: 25px;">
 <div class="espacio" style="padding: 25px"></div>
@@ -178,6 +178,7 @@
 <div class="buttonBanner"><a href="/users/logout"><button class="ejercicios-btn">Cerrar sesión</button></a></div>
 <div class="espacio" style="padding: 50px"></div>
 <div class="espacio" style="padding: 50px"></div>
+
                 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -185,5 +186,4 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
-  <%- include('./partials/footer2') %>
 </html>
