--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="/css/login.css">
     <link rel="stylesheet" href="/css/objetivos.css">
     <link rel="stylesheet" href="/css/check.css">
+    <link rel="stylesheet" href="/css/register.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -66,6 +67,7 @@
   </header>
 
   <div class="fondo">
+    <main>
     <div class="main">
   <body>
 
@@ -74,9 +76,9 @@
 
  <section class="log-sec">
 
-<div class="container">
+<div class="container" id="cont1">
     <div class="row justify-content-md-center">
-    <div class="col-xs-4 col-sm-5 col-md-7 col-lg-7">
+    <div class="col-xs-4 col-sm-4 col-md-7 col-lg-7">
 
  <div class="registro1">
 
@@ -135,7 +137,7 @@
             <a href="#objetivos"><button type="button" class="registerbutton" style="text-align:center;">Registrarme</button></a>
         </div>
         <div>
-            <p class="p" style="margin-top: 60px"><br>¿Ya tienes una cuenta? <br> <a href="/users/login"> <span style="text-decoration:underline">Inicia sesión</span></p></a>
+            <p class="p" style="margin-top: 60px;"><br>¿Ya tienes una cuenta? <br> <a href="/users/login"> <span style="text-decoration:underline; color: lavender;">Inicia sesión</span></p></a>
         </div>
         </div>
         </td>
@@ -202,10 +204,10 @@
                         <br>
                         <br>
                 </form>
-                <%- include('./partials/footer2') %>  
               </div>
             </div>
 </main>
+<%- include('./partials/footer2') %>  
 </div>
 </div>
 
