Correccion en listado

--- a/src/views/listado.ejs
+++ b/src/views/listado.ejs
@@ -67,7 +67,7 @@
     </header>
 
     <!--Estrellas-->   
-    <div class="cont-listado" style="height: 90vh!important;">
+    <div class="cont-listado" style="height: 90%!important;">
             <div class="scene" style="height: 100%; padding-bottom: 100px!important; margin-bottom: 0!important;">
                 <script type="text/javascript">
                     function stars(){
@@ -172,8 +172,8 @@
 </div>
 </div>
 </div>
-<div style="position: relative; top: -15px; padding-bottom: 15px;">
-<%- include('./partials/footer2') %>
+<div style="position: relative; top: -15px;">
+  <%- include('./partials/footer2') %>  
 </div>
 </main>
     <!-- Optional JavaScript -->
