Cambios en img de home

--- a/src/public/css/estilosindex.css
+++ b/src/public/css/estilosindex.css
@@ -348,6 +348,12 @@ padding-top: 25px;
     margin-top: 25px;
 }
 
+.quienes-somos{
+    margin: 30px;
+    height: 250px;
+    margin-top: -20px;
+    }
+
 @media (max-width: 627px){ 
     .card{
        margin-top: 1em;
