--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -207,8 +207,8 @@
   </div>
 
   <div class="quienes-somos-cont">
-    <img src="/img/img-quienes-somos.png" class="quienes-somos">
-    <img src="/img/img-quienes-somos.png" class="quienes-somos">
+    <img src="/img/Leslie.png" class="quienes-somos">
+    <img src="/img/Chris.png" class="quienes-somos">
 <p style="padding: 0 25px;; margin-bottom: 100px;">Buscamos ayudar a mejorar tu calidad de vida, promoviendo el autocuidado y bienestar de tu salud integral.</p>
 </div>
 </div>
